# libstrata

./: .clangd  .gitignore  CMakeLists.txt
include/strata/: compiler.h  handle.h  krt.h  limits.h  macros.h  status.h  types.h  uuid.h
src/: CMakeLists.txt  handle.c  handle_internal.h
